# propria

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
examples/: Makefile.am
examples/cpp17/algorithms/: .gitignore  Makefile.am  execution.hpp  executor_property.hpp  extension_property.hpp  fill_1.cpp  fill_1.hpp  fill_2.cpp  fill_2.hpp  fill_3.cpp  fill_3.hpp  fill_4.cpp  fill_4.hpp  for_each_1.cpp  for_each_1.hpp  for_each_2.cpp  for_each_2.hpp  for_each_3.cpp  for_each_3.hpp
examples/cpp17/executors_with_sub_executors/: .gitignore  execution.hpp  inline_1.cpp  perf.cpp  thread_pool.cpp
examples/cpp17/sender_executors/: .gitignore  execution.hpp  inline_1.cpp  lazy.cpp  perf.cpp  thread_pool.cpp
examples/cpp17/trivial_executors/: .gitignore  execution.hpp  inline_1.cpp  perf.cpp
examples/cpp20/: Makefile.am  Makefile.msc
examples/cpp20/allocators/prefer/: algorithm.hpp  alignment.hpp  allocator.hpp  monotonic_allocator.hpp
examples/cpp20/allocators/query/: algorithm.hpp  alignment.hpp  allocator.hpp  main.cpp  monotonic_allocator.hpp
examples/cpp20/allocators/query_with_fallback/: algorithm.hpp  alignment.hpp  monotonic_allocator.hpp
examples/cpp20/allocators/require/: algorithm.hpp  alignment.hpp  global_allocator.hpp  main.cpp
examples/cpp20/allocators/require_concept/: algorithm.hpp  allocator.hpp  global_allocator.hpp  main.cpp  monotonic_allocator.hpp
include/: Makefile.am  propria.hpp
include/propria/: is_applicable_property.hpp  prefer.hpp  query.hpp  require.hpp  require_concept.hpp
include/propria/detail/: config.hpp  type_traits.hpp
include/propria/traits/: prefer_free.hpp  query_free.hpp  query_member.hpp  query_static.hpp  require_concept_free.hpp  require_concept_member.hpp  require_concept_static.hpp  require_free.hpp  require_member.hpp  require_static.hpp  static_query.hpp  static_require.hpp  static_require_concept.hpp
tests/: .gitignore  Makefile.am  Makefile.msc
tests/cpp03/: can_prefer_free.cpp  can_prefer_member.cpp  can_prefer_not_applicable_free.cpp  can_prefer_not_applicable_member.cpp  can_prefer_not_applicable_static.cpp  can_prefer_not_applicable_unsupported.cpp  can_prefer_not_preferable_free.cpp  can_prefer_not_preferable_member.cpp  can_prefer_not_preferable_static.cpp  can_prefer_not_preferable_unsupported.cpp  can_prefer_static.cpp  can_prefer_unsupported.cpp  can_query_free.cpp  can_query_member.cpp  can_query_not_applicable_free.cpp  can_query_not_applicable_member.cpp  can_query_not_applicable_static.cpp  can_query_not_applicable_unsupported.cpp  can_query_static.cpp  can_query_unsupported.cpp  can_require_concept_free.cpp  can_require_concept_member.cpp  can_require_concept_not_applicable_free.cpp  can_require_concept_not_applicable_member.cpp  can_require_concept_not_applicable_static.cpp  can_require_concept_not_applicable_unsupported.cpp  can_require_concept_static.cpp  can_require_concept_unsupported.cpp  can_require_free.cpp  can_require_member.cpp  can_require_not_applicable_free.cpp  can_require_not_applicable_member.cpp  can_require_not_applicable_static.cpp  can_require_not_applicable_unsupported.cpp  can_require_static.cpp  can_require_unsupported.cpp  prefer_free.cpp  prefer_member.cpp  prefer_static.cpp  prefer_unsupported.cpp  (+9 more)
tests/cpp11/: can_prefer_free.cpp  can_prefer_member.cpp  can_prefer_not_applicable_free.cpp  can_prefer_not_applicable_member.cpp  can_prefer_not_applicable_static.cpp  can_prefer_not_applicable_unsupported.cpp  can_prefer_not_preferable_free.cpp  can_prefer_not_preferable_member.cpp  can_prefer_not_preferable_static.cpp  can_prefer_not_preferable_unsupported.cpp  can_prefer_static.cpp  can_prefer_unsupported.cpp  can_query_free.cpp  can_query_member.cpp  can_query_not_applicable_free.cpp  can_query_not_applicable_member.cpp  can_query_not_applicable_static.cpp  can_query_not_applicable_unsupported.cpp  can_query_static.cpp  can_query_unsupported.cpp  can_require_concept_free.cpp  can_require_concept_member.cpp  can_require_concept_not_applicable_free.cpp  can_require_concept_not_applicable_member.cpp  can_require_concept_not_applicable_static.cpp  can_require_concept_not_applicable_unsupported.cpp  can_require_concept_static.cpp  can_require_concept_unsupported.cpp  can_require_free.cpp  can_require_member.cpp  can_require_not_applicable_free.cpp  can_require_not_applicable_member.cpp  can_require_not_applicable_static.cpp  can_require_not_applicable_unsupported.cpp  can_require_static.cpp  can_require_unsupported.cpp  prefer_free.cpp  prefer_member.cpp  prefer_static.cpp  prefer_unsupported.cpp  (+9 more)
tests/cpp14/: can_prefer_free.cpp  can_prefer_member.cpp  can_prefer_not_applicable_free.cpp  can_prefer_not_applicable_member.cpp  can_prefer_not_applicable_static.cpp  can_prefer_not_applicable_unsupported.cpp  can_prefer_not_preferable_free.cpp  can_prefer_not_preferable_member.cpp  can_prefer_not_preferable_static.cpp  can_prefer_not_preferable_unsupported.cpp  can_prefer_static.cpp  can_prefer_unsupported.cpp  can_query_free.cpp  can_query_member.cpp  can_query_not_applicable_free.cpp  can_query_not_applicable_member.cpp  can_query_not_applicable_static.cpp  can_query_not_applicable_unsupported.cpp  can_query_static.cpp  can_query_unsupported.cpp  can_require_concept_free.cpp  can_require_concept_member.cpp  can_require_concept_not_applicable_free.cpp  can_require_concept_not_applicable_member.cpp  can_require_concept_not_applicable_static.cpp  can_require_concept_not_applicable_unsupported.cpp  can_require_concept_static.cpp  can_require_concept_unsupported.cpp  can_require_free.cpp  can_require_member.cpp  can_require_not_applicable_free.cpp  can_require_not_applicable_member.cpp  can_require_not_applicable_static.cpp  can_require_not_applicable_unsupported.cpp  can_require_static.cpp  can_require_unsupported.cpp  prefer_free.cpp  prefer_member.cpp  prefer_static.cpp  prefer_unsupported.cpp  (+9 more)
