# find . -name "*.*pp" | sed -e 's/^\.\///' | sed -e 's/^.*$/  & \\/' | sort
nobase_include_HEADERS = \
	propria.hpp \
	propria/detail/config.hpp \
	propria/detail/type_traits.hpp \
	propria/is_applicable_property.hpp \
	propria/prefer.hpp \
	propria/query.hpp \
	propria/require.hpp \
	propria/require_concept.hpp \
	propria/traits/prefer_free.hpp \
	propria/traits/query_free.hpp \
	propria/traits/query_member.hpp \
	propria/traits/require_concept_free.hpp \
	propria/traits/require_concept_member.hpp \
	propria/traits/require_free.hpp \
	propria/traits/require_member.hpp \
	propria/traits/static_query.hpp \
	propria/traits/static_require.hpp \
	propria/traits/static_require_concept.hpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
